--- a/action.yml
+++ b/action.yml
@@ -131,7 +131,7 @@ runs:
       name: install-manjaro-arm-tools
       shell: bash
       run: |
-        sudo git clone https://gitlab.manjaro.org/manjaro-arm/applications/manjaro-arm-tools.git
+        sudo git clone https://github.com/manjaro-libhybris/manjaro-arm-tools.git
         install_m_a_tools() {
             pkgname=manjaro-arm-tools
             sudo install -dm777 /usr/share/$pkgname/lib
@@ -169,14 +169,14 @@ runs:
       run: |
         sudo mv -v $GITHUB_WORKSPACE/arm-profiles /usr/share/manjaro-arm-tools/profiles
         if [ -z ${{ inputs.overlay-repo }} ]; then 
-          sudo buildarmimg -d $DEVICE -e $EDITION -v $VERSION -b $BRANCH
+          sudo buildhaliumzip -d $DEVICE -e $EDITION -v $VERSION -b $BRANCH
         else
-          sudo buildarmimg -d $DEVICE -e $EDITION -v $VERSION -b $BRANCH -k ${{ inputs.overlay-repo }}
+          sudo buildhaliumzip -d $DEVICE -e $EDITION -v $VERSION -b $BRANCH -k ${{ inputs.overlay-repo }}
         fi
           
         ls -lasih /var/cache/manjaro-arm-tools/img
           
-        FILE_PATH=$(find /var/cache/manjaro-arm-tools/img -type f -name "*.img.xz" -exec stat -c '%Y %n' {} \; | sort -nr | awk 'NR==1 {print $2}')
+        FILE_PATH=$(find /var/cache/manjaro-arm-tools/img -type f -name "*.zip" -exec stat -c '%Y %n' {} \; | sort -nr | awk 'NR==1 {print $2}')
         cp -v $FILE_PATH .
         echo "::set-output name=file-path::$(basename $FILE_PATH)"
           
