--- a/.github/workflows/rootfs_build.yaml
+++ b/.github/workflows/rootfs_build.yaml
@@ -103,7 +103,7 @@ jobs:
         name: setup-qemu-binfmt
         shell: bash
         run: |
-          sudo wget https://gitlab.manjaro.org/packages/community/manjaro-arm-qemu-static/-/raw/master/qemu-static.conf -O /usr/lib/binfmt.d/qemu-static.conf
+          sudo wget https://raw.githubusercontent.com/manjaro-libhybris/manjaro-arm-tools/master/lib/qemu-static.conf -O /usr/lib/binfmt.d/qemu-static.conf
           sudo service systemd-binfmt restart
 
       -
